--- a/style.css
+++ b/style.css
@@ -249,4 +249,17 @@ section {
   justify-content: center;
 }
 
+.code-source {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+}
+
+a, a:active, a:visited, a:hover {
+  color: #222;
+  font-family: monospace;
+  font-weight: normal;
+  text-decoration: none;
+}
+
 
